feat: add Header Component

--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/src/app/_components",
-    "utils": "@/src/app/_lib/utils"
+    "components": "@/_components",
+    "utils": "@/app/_lib/utils"
   }
 }
